Fix viewport zoom for mobile and faster load of home page imgs

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html><head>
   <title>Portfolio - Tres Henry</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="http://treshenry.net/css/main.css">
   <link rel="stylesheet" href="http://treshenry.net/css/all.min.css">
 </head>
