--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html><head>
-  <title>Portfolio - Tres Henry</title>
+  <title>
+    
+    Tres Henry - Portfolio
+  </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="http://treshenry.net/css/main.css">
-  <link rel="stylesheet" href="http://treshenry.net/css/all.min.css">
+  <link rel="stylesheet" href='http://treshenry.net/css/main.css'>
+  <link rel="stylesheet" href='http://treshenry.net/css/all.min.css'>
 </head>
 <body>
         <div class="container">
@@ -12,9 +15,10 @@
 
 > <i class="fas fa-archive"></i> Portfolio
 
+
 <div class="divider"></div>
 
-  <div class="portfolio">
+  <div class="shrink-content">
     
 
 <h1 id="portfolio-tres-henry">Portfolio - Tres Henry</h1>
@@ -63,8 +67,8 @@
 <h2 id="recent-projects">Recent Projects</h2>
 
 <ul>
-<li>Hermes</li>
-<li>The Watcher</li>
+<li><a href="http://treshenry.net/projects/hermes/">Hermes</a></li>
+<li><a href="http://treshenry.net/projects/thewatcher/">The Watcher</a></li>
 </ul>
 
 <h2 id="oracle">Oracle</h2>
@@ -77,14 +81,26 @@
 
 <p>Whithin two years I more than doubled the size of the UX team and hired or promoted managers to handle further growth. A complete list of responsibilities and accomplishments are included in my <a href="https://drive.google.com/file/d/1OuguDKZ_6x3_9F6SoDrCwXOHuOUra15x">CV</a>.</p>
 
-<p><img src="/images/oracle_larry_demo.png" alt="Oracle Larry Demo" />
-<em>Very early functioning prototype of OCI web console, built in 3 months, and used to demo functionality to Larry Ellison.</em></p>
+<figure>
+    <img src="/images/oracle_larry_demo.png"/> <figcaption>
+            <h4>Very early functioning prototype of OCI web console, built in 3 months, and used to demo functionality to Larry Ellison.</h4>
+        </figcaption>
+</figure>
 
-<p><img src="/images/oracle_user_list.png" alt="Oracle User List" />
-<em>High-fidelity list view mockup, including navigation elements.</em></p>
 
-<p><img src="/images/oracle_dialog.png" alt="Oracle Dialog" />
-<em>Interactive dialog with real-time notifications and graceful error handling in batch operations.</em></p>
+<figure>
+    <img src="/images/oracle_user_list.png"/> <figcaption>
+            <h4>High-fidelity list view mockup, including navigation elements.</h4>
+        </figcaption>
+</figure>
+
+
+<figure>
+    <img src="/images/oracle_dialog.png"/> <figcaption>
+            <h4>Interactive dialog with real-time notifications and graceful error handling in batch operations.</h4>
+        </figcaption>
+</figure>
+
 
 <h2 id="nebula">Nebula</h2>
 
@@ -100,36 +116,71 @@ My team built and delivered every surface of user interaction in the product inc
   <iframe src="//www.youtube.com/embed/KUqOxR3vpBE" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
-<em>Product release marketing video.</em></p>
+<figure>
+    <img src=""/> <figcaption>
+            <h4>Product release marketing video.</h4>
+        </figcaption>
+</figure>
+</p>
 
 <p>
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="//www.youtube.com/embed/OCk0JeMojLM" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
-<em>Hardware OOBE and initial configuration.</em></p>
+<figure>
+    <img src=""/> <figcaption>
+            <h4>Hardware OOBE and initial configuration.</h4>
+        </figcaption>
+</figure>
+</p>
 
 <p>
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="//www.youtube.com/embed/ObuAf9m83jU" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
-<em>Nebula&rsquo;s hardware &amp; proprietary end-user web management console.</em></p>
+<figure>
+    <img src=""/> <figcaption>
+            <h4>Nebula&#39;s hardware &amp; proprietary end-user web management console.</h4>
+        </figcaption>
+</figure>
+</p>
 
-<p><img src="/images/nebula_rack.png" alt="Nebula 5x Rack" />
-<em>Fully populated 5x rack with Nebula controllers and nodes.</em></p>
+<figure>
+    <img src="/images/nebula_rack.png"/> <figcaption>
+            <h4>Fully populated 5x rack with Nebula controllers and nodes.</h4>
+        </figcaption>
+</figure>
 
-<p><img src="/images/nebula_moodboard.png" alt="Nebula Ingredients" />
-<em>Mood board guiding Nebula&rsquo;s aesthetic.</em></p>
 
-<p><img src="/images/lighthouse_home.png" alt="Lighthouse Home" />
-<em>Cloud Applications overview, including multiple tenants.</em></p>
+<figure>
+    <img src="/images/nebula_moodboard.png"/> <figcaption>
+            <h4>Mood board guiding Nebula&#39;s aesthetic.</h4>
+        </figcaption>
+</figure>
 
-<p><img src="/images/nebula_health_graphs.png" alt="Nebula Health Graphs" />
-<em>Real-time health stats and metrics.</em></p>
 
-<p><img src="/images/horizon_home_admin.png" alt="Horizon OpenStack" />
-<em>Horizon, the OpenStack default UI.</em></p>
+<figure>
+    <img src="/images/lighthouse_home.png"/> <figcaption>
+            <h4>Cloud Applications overview, including multiple tenants.</h4>
+        </figcaption>
+</figure>
+
+
+<figure>
+    <img src="/images/nebula_health_graphs.png"/> <figcaption>
+            <h4>Real-time health stats and metrics.</h4>
+        </figcaption>
+</figure>
+
+
+<figure>
+    <img src="/images/horizon_home_admin.png"/> <figcaption>
+            <h4>Horizon, the OpenStack default UI.</h4>
+        </figcaption>
+</figure>
+
 
 <p>The initial version of Nebula&rsquo;s self-service UI was built on top of Horizon, OpenStack&rsquo;s default web management interface. As the Project Technical Lead for Horizon I drove a series of features that enabled 3rd party customization of Horizon&rsquo;s functionality which also enabled Nebula to provide a custom user interface based on Horizon. However, Nebula was unable to meaningfully differentiate on user experience with Horizon which lead to the creation of Lighthouse, Nebula&rsquo;s proprietary UI.</p>
 
@@ -141,8 +192,12 @@ My team built and delivered every surface of user interaction in the product inc
 
 <p>When I joined AWS, the EC2 management console had just launched with such success that leadership moved to requiring every new AWS feature ship with UI support. This was an enormous scaling challenge, particularly trying to ensure a seamless user experience across feature areas owned by a variety of teams. By working across teams and organizations, the AWS Console Team was able to deliver a development toolkit that enabled teams with light (or no) design support to build user interfaces adhering to the AWS style guide and design system.</p>
 
-<p><img src="/images/aws_console_launch.png" alt="Amazon AWS Console" />
-<em>Older version of the new instance launch wizard, built by my team.</em></p>
+<figure>
+    <img src="/images/aws_console_launch.png"/> <figcaption>
+            <h4>Older version of the new instance launch wizard, built by my team.</h4>
+        </figcaption>
+</figure>
+
 
 <h2 id="way-back">Way Back</h2>
 
@@ -150,8 +205,12 @@ My team built and delivered every surface of user interaction in the product inc
 
 <p><em>11/07–11/08 (Software Development Lead)</em></p>
 
-<p><img src="/images/myspace.png" alt="MySpace" />
-<em>Old MySpace homepage.</em></p>
+<figure>
+    <img src="/images/myspace.png"/> <figcaption>
+            <h4>Old MySpace homepage.</h4>
+        </figcaption>
+</figure>
+
 
 <h3 id="escapia">Escapia</h3>
 
@@ -163,8 +222,12 @@ My team built and delivered every surface of user interaction in the product inc
 
 <p><em>10/97–06/02 (Software Development Engineer)</em></p>
 
-<p><img src="/images/gdn_home.png" alt="GotDotNet Homepage" />
-<em>GotDotNet homepage</em></p>
+<figure>
+    <img src="/images/gdn_home.png"/> <figcaption>
+            <h4>Old GotDotNet homepage.</h4>
+        </figcaption>
+</figure>
+
 
   </div>
 <div class="footer">
