--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href='http://treshenry.net/css/main.css'>
   <link rel="stylesheet" href='http://treshenry.net/css/all.min.css'>
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50896728-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-50896728-1');
+  </script>
 </head>
 <body>
         <div class="container">
@@ -143,7 +152,7 @@
 
 <p>I created a prototype to gather initial market research for an annotation-based notes app concept I&rsquo;m calling <em>Hermes</em>. The prototype covers a small subset of potential functionality—the hotdog of the hotdog stand—but demonstrates the core concept. The prototype is an Electron app written in TypeScript with Vue for rendering and Dexie (IndexedDB) for data. The prototype was a low-fi research tool with no visual design.</p>
 
-<h2 id="pros-hahahugoshortcode-0xc000297400-2-hbhb">Pros <i class="far fa-thumbs-up"></i></h2>
+<h2 id="pros-hahahugoshortcode-0xc00015af00-2-hbhb">Pros <i class="far fa-thumbs-up"></i></h2>
 
 <ul>
 <li>Key/value annotations enable users to create natural taxonomies on-the-fly.</li>
@@ -155,13 +164,13 @@
 </ul></li>
 </ul>
 
-<h2 id="cons-hahahugoshortcode-0xc000297400-3-hbhb">Cons <i class="far fa-thumbs-down"></i></h2>
+<h2 id="cons-hahahugoshortcode-0xc00015af00-3-hbhb">Cons <i class="far fa-thumbs-down"></i></h2>
 
 <ul>
 <li>User created taxonomies tend toward complexity and messiness, particularly with large teams.</li>
 </ul>
 
-<h2 id="research-hahahugoshortcode-0xc000297400-4-hbhb">Research <i class="fas fa-search-dollar"></i></h2>
+<h2 id="research-hahahugoshortcode-0xc00015af00-4-hbhb">Research <i class="fas fa-search-dollar"></i></h2>
 
 <p>10 participants from a variety of backgrounds participated in concept research. General results were positive. Here&rsquo;s a bit from the results.</p>
 
