Posts and first post

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1><i class="far fa-star"></i> Tres Henry <i class="far fa-star"></i></h1>
       <nav>
         <ul>
-          <li><i class="fas fa-pen-fancy"></i> Posts</li>
+          <li><a href='http://treshenry.net/posts'><i class="fas fa-pen-fancy"></i> Posts</li></a>
           <li><a href='http://treshenry.net/projects'><i class="fas fa-hammer"></i> Projects</a></li>
           <li><a href='http://treshenry.net/portfolio'><i class="fas fa-archive"></i> Portfolio</a></li>
           <li><a href="https://drive.google.com/file/d/1OuguDKZ_6x3_9F6SoDrCwXOHuOUra15x"><i class="fas fa-scroll"></i> CV</a></li>
