--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,6 +25,7 @@
 > <i class="fas fa-archive"></i> Portfolio
 
 
+
 <div class="divider"></div>
 
   <div class="shrink-content">
@@ -88,7 +89,7 @@
 
 <p>Oracle acquired Nebula, Inc (see below) in April of 2014. At that time I managed a 6 person UX team of two designers, three developers, and one dev-ops/QA. Oracle was just a few months into creating an entirely new cloud product (now called Oracle Cloud Infrastructure) but had no UX team. I brought in my team and within eight months we delivered a fully functioning self-service web application covering all launch features.</p>
 
-<p>Whithin two years I more than doubled the size of the UX team and hired or promoted managers to handle further growth. A complete list of responsibilities and accomplishments are included in my <a href="https://drive.google.com/file/d/1OuguDKZ_6x3_9F6SoDrCwXOHuOUra15x">CV</a>.</p>
+<p>Within two years I more than doubled the size of the UX team and hired or promoted managers to handle further growth. A complete list of responsibilities and accomplishments are included in my <a href="https://drive.google.com/file/d/1OuguDKZ_6x3_9F6SoDrCwXOHuOUra15x">CV</a>.</p>
 
 <figure>
     <img src="/images/oracle_larry_demo.png"/> <figcaption>
