--- a/projects/goldenoracle/index.html
+++ b/projects/goldenoracle/index.html
@@ -31,9 +31,10 @@
   
 
 
+
 <div class="divider"></div>
 
-  <div class="project-title">
+  <div class="top-title">
   <div class="name">Golden Oracle</div>
   <div class="dates">
     Started: 01.02.2018<br>
