--- a/projects/index.html
+++ b/projects/index.html
@@ -28,6 +28,7 @@
   
 
 
+
 <div class="divider"></div>
 
   <h1><i class="fas fa-hammer"></i> Index</h1>
@@ -49,7 +50,7 @@
   <div class="divider"></div>
   <h1><i class="far fa-clock"></i> Recently Updated</h1>
   
-    <div class="project-title">
+    <div class="top-title">
   <div class="name">Golden Oracle</div>
   <div class="dates">
     Started: 01.02.2018<br>
@@ -99,7 +100,7 @@
 </div>
 
   
-    <div class="project-title">
+    <div class="top-title">
   <div class="name">The Watcher</div>
   <div class="dates">
     Started: 19.11.2017<br>
@@ -113,7 +114,7 @@
 
 <p>Apart from creating all of the game&rsquo;s content (excluding the score), one of the key challenges was communicating purely through the use of symbol and interaction. There is no written language in the game telling the player what to do, why, or how. Many portions of the game went through dozens of iterations based on player feedback.</p>
 
-<p><em>The Watcher</em> was my first major mobile project which involved working with the Android toolchain, prototyping on the physical device (and in the VR headset), dealing with hardware constraints, and releasing in the Google Play store.</p>
+<p><em>The Watcher</em> was my first major mobile project which involved working with the Android tool-chain, prototyping on the physical device (and in the VR headset), dealing with hardware constraints, and releasing in the Google Play store.</p>
 
 <p>Google Play store page: <a href="https://tinyurl.com/yys2k365">https://tinyurl.com/yys2k365</a></p>
 
@@ -132,7 +133,7 @@
 </div>
 
   
-    <div class="project-title">
+    <div class="top-title">
   <div class="name">Hermes</div>
   <div class="dates">
     Started: 02.09.2018<br>
@@ -152,7 +153,7 @@
 
 <p>I created a prototype to gather initial market research for an annotation-based notes app concept I&rsquo;m calling <em>Hermes</em>. The prototype covers a small subset of potential functionality—the hotdog of the hotdog stand—but demonstrates the core concept. The prototype is an Electron app written in TypeScript with Vue for rendering and Dexie (IndexedDB) for data. The prototype was a low-fi research tool with no visual design.</p>
 
-<h2 id="pros-hahahugoshortcode-0xc00015af00-2-hbhb">Pros <i class="far fa-thumbs-up"></i></h2>
+<h2 id="pros-hahahugoshortcode-0xc000154f00-2-hbhb">Pros <i class="far fa-thumbs-up"></i></h2>
 
 <ul>
 <li>Key/value annotations enable users to create natural taxonomies on-the-fly.</li>
@@ -164,13 +165,13 @@
 </ul></li>
 </ul>
 
-<h2 id="cons-hahahugoshortcode-0xc00015af00-3-hbhb">Cons <i class="far fa-thumbs-down"></i></h2>
+<h2 id="cons-hahahugoshortcode-0xc000154f00-3-hbhb">Cons <i class="far fa-thumbs-down"></i></h2>
 
 <ul>
 <li>User created taxonomies tend toward complexity and messiness, particularly with large teams.</li>
 </ul>
 
-<h2 id="research-hahahugoshortcode-0xc00015af00-4-hbhb">Research <i class="fas fa-search-dollar"></i></h2>
+<h2 id="research-hahahugoshortcode-0xc000154f00-4-hbhb">Research <i class="fas fa-search-dollar"></i></h2>
 
 <p>10 participants from a variety of backgrounds participated in concept research. General results were positive. Here&rsquo;s a bit from the results.</p>
 
