--- a/projects/thewatcher/index.html
+++ b/projects/thewatcher/index.html
@@ -31,9 +31,10 @@
   
 
 
+
 <div class="divider"></div>
 
-  <div class="project-title">
+  <div class="top-title">
   <div class="name">The Watcher</div>
   <div class="dates">
     Started: 19.11.2017<br>
@@ -47,7 +48,7 @@
 
 <p>Apart from creating all of the game&rsquo;s content (excluding the score), one of the key challenges was communicating purely through the use of symbol and interaction. There is no written language in the game telling the player what to do, why, or how. Many portions of the game went through dozens of iterations based on player feedback.</p>
 
-<p><em>The Watcher</em> was my first major mobile project which involved working with the Android toolchain, prototyping on the physical device (and in the VR headset), dealing with hardware constraints, and releasing in the Google Play store.</p>
+<p><em>The Watcher</em> was my first major mobile project which involved working with the Android tool-chain, prototyping on the physical device (and in the VR headset), dealing with hardware constraints, and releasing in the Google Play store.</p>
 
 <p>Google Play store page: <a href="https://tinyurl.com/yys2k365">https://tinyurl.com/yys2k365</a></p>
 
